--- a/page24.html
+++ b/page24.html
@@ -27,7 +27,7 @@
 </head>
 <body>
   
-  <section id="ext_menu-80" data-rv-view="1006" class="mbr-after-navbar">
+  <section id="ext_menu-80" data-rv-view="359" class="mbr-after-navbar">
 
     <nav class="navbar navbar-dropdown">
         <div class="container">
@@ -60,7 +60,7 @@
 
 </section>
 
-<section id="menu-fe" data-rv-view="368">
+<section id="menu-g4" data-rv-view="16">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -70,7 +70,7 @@
 
                     <div class="navbar-brand">
                         <a href="https://mobirise.com" class="navbar-logo"><img src="assets/images/img-8455-130x128.jpg" alt="Mobirise"></a>
-                        <a class="navbar-caption text-black" href="https://mobirise.com">fixxface.</a>
+                        <a class="navbar-caption text-black text-primary" href="index.html">fixxface.</a>
                     </div>
 
                 </div>
@@ -80,7 +80,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="#" aria-expanded="false">預約須知 ❍</a></li><li class="nav-item"><a class="nav-link link" href="#" aria-expanded="false">關於我們 ✹</a></li><li class="nav-item"><a class="nav-link link" href="#" aria-expanded="false">課程教學&nbsp; ◒</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="false">服務項目 ✹<br></a><div class="dropdown-menu"><a class="dropdown-item" href="https://mobirise.com/">獨家膠蛋白逆齡童顏療程</a><a class="dropdown-item" href="https://mobirise.com/">韓國角蛋白美睫</a><div class="dropdown"><a class="dropdown-item dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="false">Trendy blocks</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="https://mobirise.com/">Image/content slider</a><a class="dropdown-item" href="https://mobirise.com/">Contact forms</a><a class="dropdown-item" href="https://mobirise.com/">Image gallery</a><a class="dropdown-item" href="https://mobirise.com/">Mobile menu</a><a class="dropdown-item" href="https://mobirise.com/">Google maps</a><a class="dropdown-item" href="https://mobirise.com/">Social buttons</a><a class="dropdown-item" href="https://mobirise.com/">Google fonts</a><a class="dropdown-item" href="https://mobirise.com/">Video background</a></div></div><a class="dropdown-item" href="https://mobirise.com/" aria-expanded="false">New Item</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="#" aria-expanded="false" data-toggle="dropdown-submenu">產品販售 ☁<br></a><div class="dropdown-menu"><a class="dropdown-item" href="https://mobirise.com/" aria-expanded="false">New Item</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="false">HELP</a><div class="dropdown-menu"><a class="dropdown-item" href="http://forums.mobirise.com/">Forum</a><a class="dropdown-item" href="https://mobirise.com/">Tutorials</a><a class="dropdown-item" href="https://mobirise.com/">Contact us</a></div></li><li class="nav-item nav-btn"><a class="nav-link btn btn-white btn-white-outline" href="https://mobirise.com/">DOWNLOAD</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link text-primary" href="news.html" aria-expanded="false">預約須知 ❍</a></li><li class="nav-item"><a class="nav-link link text-primary" href="page47.html" aria-expanded="false">關於我們 ✹</a></li><li class="nav-item"><a class="nav-link link text-primary" href="page44.html" aria-expanded="false">課程教學&nbsp; ◒</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="false">服務項目 ✹<br></a><div class="dropdown-menu"><a class="dropdown-item text-primary" href="page29.html">獨家膠蛋白逆齡童顏療程</a><a class="dropdown-item text-primary" href="page20.html">韓國角蛋白美睫</a><a class="dropdown-item" href="https://mobirise.com/" aria-expanded="true">臉部服務項目</a><a class="dropdown-item" href="https://mobirise.com/" aria-expanded="false">New Item</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="#" aria-expanded="false" data-toggle="dropdown-submenu">產品販售 ☁<br></a><div class="dropdown-menu"><a class="dropdown-item" href="https://mobirise.com/" aria-expanded="false">New Item</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="false">HELP</a><div class="dropdown-menu"><a class="dropdown-item" href="http://forums.mobirise.com/">Forum</a><a class="dropdown-item" href="https://mobirise.com/">Tutorials</a><a class="dropdown-item" href="https://mobirise.com/">Contact us</a></div></li><li class="nav-item nav-btn"><a class="nav-link btn btn-white btn-white-outline" href="https://mobirise.com/">DOWNLOAD</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -93,7 +93,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-b6" data-rv-view="364" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-b6" data-rv-view="361" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -103,7 +103,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content2-b5" data-rv-view="366" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content2-b5" data-rv-view="363" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
