--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container" id="buttons1-9z" data-rv-view="8" style="background-color: rgb(140, 140, 140); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section mbr-section__container" id="buttons1-9z" data-rv-view="8" style="background-color: rgb(193, 193, 193); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -124,7 +124,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section-md-padding mbr-footer footer1" id="contacts1-2c" data-rv-view="10" style="background-color: rgb(229, 226, 221); padding-top: 60px; padding-bottom: 90px;">
+<section class="mbr-section mbr-section-md-padding mbr-footer footer1" id="contacts1-2c" data-rv-view="10" style="background-color: rgb(229, 226, 221); padding-top: 60px; padding-bottom: 30px;">
     
     <div class="container">
         <div class="row">
@@ -151,7 +151,7 @@
         <div class="row">
             <div class="col-md-8 col-md-offset-2 text-xs-center">
                 <h3 class="mbr-section-title display-2">FOLLOW US</h3>
-                <div> <a class="btn btn-social" title="Facebook" target="_blank" href="https://www.facebook.com/pages/Mobirise/1616226671953247"><i class="socicon socicon-facebook"></i></a>  <a class="btn btn-social btn-primary" title="YouTube" target="_blank" href="https://line.me/R/ti/p/%40llr0044b"><span class="socicon socicon-line mbr-iconfont mbr-iconfont-btn"></span></a> <a class="btn btn-social" title="Instagram" target="_blank" href="https://www.instagram.com/fixxface/"><i class="socicon socicon-instagram"></i></a>      </div>
+                <div> <a class="btn btn-social" title="Facebook" target="_blank" href="https://www.facebook.com/fixface721"><i class="socicon socicon-facebook"></i></a>  <a class="btn btn-social btn-primary" title="YouTube" target="_blank" href="https://line.me/R/ti/p/%40llr0044b"><span class="socicon socicon-line mbr-iconfont mbr-iconfont-btn"></span></a> <a class="btn btn-social" title="Instagram" target="_blank" href="https://www.instagram.com/fixxface/"><i class="socicon socicon-instagram"></i></a>      </div>
             </div>
         </div>
     </div>
