--- a/page41.html
+++ b/page41.html
@@ -36,7 +36,7 @@
                 <div class="mbr-table-cell">
 
                     <div class="navbar-brand">
-                        <a href="https://mobirise.com" class="navbar-logo"><img src="assets/images/img-8456-128x128.jpg" alt="Mobirise"></a>
+                        <a href="https://line.me/R/ti/p/%40llr0044b" target="_blank" class="navbar-logo"><img src="assets/images/img-8456-128x128.jpg" alt="Mobirise"></a>
                         <a class="navbar-caption text-black" href="index.html">fixxface.</a>
                     </div>
 
@@ -47,7 +47,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="false">HELP</a><div class="dropdown-menu"><a class="dropdown-item" href="http://forums.mobirise.com/">Forum</a><a class="dropdown-item" href="https://mobirise.com/">Tutorials</a><a class="dropdown-item" href="https://mobirise.com/">Contact us</a></div></li><li class="nav-item"><a class="nav-link link text-primary" href="news.html" aria-expanded="true">預約須知 ❍</a></li><li class="nav-item"><a class="nav-link link text-primary" href="page47.html" aria-expanded="true">關於我們 ✹</a></li><li class="nav-item"><a class="nav-link link text-primary" href="page44.html" aria-expanded="true">課程教學 ◒</a></li><li class="nav-item"><a class="nav-link link text-primary" href="products.html" aria-expanded="true">產品販售 ☁</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="index.html">DOWNLOAD</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="true">HELP</a><div class="dropdown-menu"><a class="dropdown-item" href="https://mobirise.com/">Contact us</a></div></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="news.html">預約須知 ❍</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="page47.html">關於我們 ✹</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="page44.html">課程教學 ◒</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="products.html">產品販售 ☁</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -60,28 +60,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section-md-padding mbr-footer footer1 mbr-after-navbar" id="contacts1-du" data-rv-view="735" style="background-color: rgb(229, 226, 221); padding-top: 60px; padding-bottom: 30px;">
-    
-    <div class="container">
-        <div class="row">
-            <div class="mbr-footer-content col-xs-12 col-md-3">
-                <div><img src="assets/images/s-13877260-128x128.jpg"></div>
-            </div>
-            <div class="mbr-footer-content col-xs-12 col-md-3">
-                <p><br>預約方式&nbsp;<br>＿<br>Line＠行動條碼<br>＠llroo44b<br><a href="https://line.me/R/ti/p/%40llr0044b" target="_blank" class="text-success">https://line.me/R/ti/p/%40llr0044b</a><br></p>
-            </div>
-            <div class="mbr-footer-content col-xs-12 col-md-3">
-                <p>＿<br>Phone: 0988-856-272<br><br></p>
-            </div>
-            <div class="mbr-footer-content col-xs-12 col-md-3">
-                <p>&nbsp;</p>
-            </div>
-
-        </div>
-    </div>
-</section>
-
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-dv" data-rv-view="737" style="background-color: rgb(255, 255, 255); padding-top: 0.875rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding mbr-after-navbar" id="footer1-dv" data-rv-view="737" style="background-color: rgb(255, 255, 255); padding-top: 0.875rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>- 高雄 休修臉 美學 -<br>since2017<br><br></p>
