--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   
   <section id="menu-g4" data-rv-view="1387">
 
-    <nav class="navbar navbar-dropdown">
+    <nav class="navbar navbar-dropdown bg-color transparent navbar-fixed-top">
         <div class="container">
 
             <div class="mbr-table">
@@ -61,7 +61,17 @@
 
 </section>
 
-<section class="mbr-section mbr-section-md-padding mbr-after-navbar" id="social-buttons1-aa" data-rv-view="1373" style="background-color: rgb(255, 255, 255); padding-top: 30px; padding-bottom: 0px;">
+<section class="mbr-section article mbr-section__container mbr-after-navbar" id="content1-gj" data-rv-view="2327" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 lead"><p>&nbsp;</p></div>
+        </div>
+    </div>
+
+</section>
+
+<section class="mbr-section mbr-section-md-padding" id="social-buttons1-aa" data-rv-view="1373" style="background-color: rgb(255, 255, 255); padding-top: 30px; padding-bottom: 0px;">
     
     <div class="container">
         <div class="row">
