--- a/page21.html
+++ b/page21.html
@@ -31,7 +31,7 @@
   
   <section id="menu-g4" data-rv-view="318">
 
-    <nav class="navbar navbar-dropdown">
+    <nav class="navbar navbar-dropdown bg-color transparent navbar-fixed-top">
         <div class="container">
 
             <div class="mbr-table">
