--- a/page38.html
+++ b/page38.html
@@ -63,7 +63,7 @@
 
 <section id="menu-g4" data-rv-view="605">
 
-    <nav class="navbar navbar-dropdown">
+    <nav class="navbar navbar-dropdown bg-color transparent navbar-fixed-top">
         <div class="container">
 
             <div class="mbr-table">
