--- a/page44.html
+++ b/page44.html
@@ -65,7 +65,7 @@
 
 <section id="menu-g4" data-rv-view="813">
 
-    <nav class="navbar navbar-dropdown">
+    <nav class="navbar navbar-dropdown bg-color transparent navbar-fixed-top">
         <div class="container">
 
             <div class="mbr-table">
