--- a/page6.html
+++ b/page6.html
@@ -30,7 +30,7 @@
   
   <section id="menu-g4" data-rv-view="67">
 
-    <nav class="navbar navbar-dropdown">
+    <nav class="navbar navbar-dropdown bg-color transparent navbar-fixed-top">
         <div class="container">
 
             <div class="mbr-table">
