--- a/page44.html
+++ b/page44.html
@@ -30,7 +30,7 @@
 </head>
 <body>
   
-  <section id="ext_menu-ep" data-rv-view="1141" class="mbr-after-navbar">
+  <section id="ext_menu-ep" data-rv-view="659" class="mbr-after-navbar">
 
     <nav class="navbar navbar-dropdown">
         <div class="container">
@@ -63,7 +63,7 @@
 
 </section>
 
-<section id="menu-g4" data-rv-view="813">
+<section id="menu-g4" data-rv-view="702">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -96,7 +96,7 @@
 
 </section>
 
-<section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel" id="gallery2-f2" data-filter="false" data-rv-view="770" style="padding-top: 6rem; padding-bottom: 6rem;">
+<section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel" id="gallery2-f2" data-filter="false" data-rv-view="661" style="padding-top: 6rem; padding-bottom: 6rem;">
     <!-- Filter -->
     
 
@@ -238,7 +238,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-f3" data-rv-view="805" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-f3" data-rv-view="696" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -248,19 +248,19 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container" id="buttons1-f0" data-rv-view="807" style="background-color: rgb(255, 255, 255); padding-top: 40px; padding-bottom: 20px;">
+<section class="mbr-section mbr-section__container" id="buttons1-f0" data-rv-view="698" style="background-color: rgb(255, 255, 255); padding-top: 40px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <div class="text-xs-center"><a class="btn btn-primary" href="page26.html">眉毛塑形教學</a> <a class="btn btn-black btn-black-outline" href="page26.html">角蛋白睫毛教學<br></a></div>
+                <div class="text-xs-center"><a class="btn btn-primary" href="page46.html" target="_blank">眉毛塑形教學</a> <a class="btn btn-black btn-black-outline" href="page26.html">角蛋白睫毛教學<br></a></div>
             </div>
         </div>
     </div>
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-ez" data-rv-view="811" style="background-color: rgb(255, 255, 255); padding-top: 0.875rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-ez" data-rv-view="700" style="background-color: rgb(255, 255, 255); padding-top: 0.875rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>✦&nbsp;高雄 休修臉 美學&nbsp;✦<br>since2017<br><br></p>
