--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <div class="text-xs-center">  <a class="btn btn-white-outline btn-white" href="news.html" target="_blank">&nbsp; &nbsp; 預約須知 &nbsp; &nbsp;</a>    <a class="btn btn-white-outline btn-white" href="page44.html" target="_blank">&nbsp; &nbsp; 課程教學 &nbsp; &nbsp;</a> <a class="btn btn-white-outline btn-white" href="page20.html" target="_blank">韓國角蛋白美睫</a> <a class="btn btn-white-outline btn-white" href="menu.html" target="_blank">  臉部服務項目 </a>  <a class="btn btn-white-outline btn-white" href="products.html" target="_blank">&nbsp; 網路產品販售&nbsp;</a> <a class="btn btn-white-outline btn-white" href="page18.html" target="_blank">你可能很想知道</a></div>
+                <div class="text-xs-center">  <a class="btn btn-white-outline btn-white" href="news.html" target="_blank">&nbsp; &nbsp; 預約須知 &nbsp; &nbsp;</a>    <a class="btn btn-white-outline btn-white" href="page44.html" target="_blank">&nbsp; &nbsp; 課程教學 &nbsp; &nbsp;</a>  <a class="btn btn-white-outline btn-white" href="menu.html" target="_blank">服務項目 </a>  <a class="btn btn-white-outline btn-white" href="products.html" target="_blank">&nbsp; 網路產品販售&nbsp;</a> <a class="btn btn-white-outline btn-white" href="page18.html" target="_blank">你可能很想知道</a></div>
             </div>
         </div>
     </div>
